--- a/media.css
+++ b/media.css
@@ -14,6 +14,7 @@
 
   .hero {
     padding: 40px;
+    background-position: top left;
   }
   .hero-main {
     padding: 0px;
@@ -59,4 +60,8 @@
   #jtr {
     display: block;
   }
+}
+
+.text.active {
+  scale: 1.2;
 }
